app/main/default/objects/OAH_Event__c/fields/Court_Reporter__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Court_Reporter__c</fullName>
        <label>Court Reporter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>