app/main/default/objects/OAH_Event__c/fields/Event_Address__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Address__c</fullName>
        <description>Address of the location where the event will be held (for neighbor islands).</description>
        <label>Event Address</label>
        <type>TextArea</type>
    </fields>
</CustomObject>