app/main/default/objects/OAH_Event__c/fields/Event_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>DateValue( Event_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
</CustomObject>