app/main/default/objects/OAH_Event__c/fields/Event_Description__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>