app/main/default/objects/OAH_Event__c/fields/Event_Location__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oahu</fullName>
                    <default>true</default>
                    <label>Oahu</label>
                </value>
                <value>
                    <fullName>Hilo</fullName>
                </value>
                <value>
                    <fullName>Kona</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>