app/main/default/objects/OAH_Event__c/fields/Event_Notes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <label>Event Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>