app/main/default/objects/OAH_Event__c/fields/Event_Phone__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Phone__c</fullName>
        <label>Event Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>