app/main/default/objects/OAH_Event__c/fields/Event_Room__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Room__c</fullName>
        <label>Event Room</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hearings Room 1</fullName>
                </value>
                <value>
                    <fullName>Hearings Room 1 (multi-day hearing)</fullName>
                </value>
                <value>
                    <fullName>Hearings Room 2</fullName>
                </value>
                <value>
                    <fullName>James Kaliokalani</fullName>
                </value>
                <value>
                    <fullName>King Kalakaua</fullName>
                </value>
                <value>
                    <fullName>MICP Room</fullName>
                </value>
                <value>
                    <fullName>Prince Leleiohoku</fullName>
                </value>
                <value>
                    <fullName>Princess Likelike</fullName>
                </value>
                <value>
                    <fullName>Queen Liliuokalani</fullName>
                </value>
                <value>
                    <fullName>Ralph Rosenberg-Maui</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>