app/main/default/objects/OAH_Event__c/fields/Event_Start_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>