app/main/default/objects/OAH_Event__c/fields/Event_Time__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Time__c</fullName>
        <formula>/* 36,000,000 = 10 * 60 * 60 * 1000 */
/* 79,200,000 = 22 * 60 * 60 * 1000 */
/*            HH   MM   SS   MS   */

/* IF(logical_test, value_if_true, value_if_false)  */
IF( HOUR( TIMEVALUE( Event_Start_Date__c ) - 36000000) &lt; 12,
TEXT( HOUR( TIMEVALUE( Event_Start_Date__c ) - 36000000) ) &amp; &quot;:&quot; &amp; LPAD( TEXT( MINUTE( TIMEVALUE( Event_Start_Date__c ))), 2, &quot;0&quot;) &amp; &quot; AM&quot;,
TEXT( HOUR( TIMEVALUE( Event_Start_Date__c ) - 79200000) ) &amp; &quot;:&quot; &amp; LPAD( TEXT( MINUTE( TIMEVALUE( Event_Start_Date__c ))), 2, &quot;0&quot;) &amp; &quot; PM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Time</label>
        <type>Text</type>
    </fields>
</CustomObject>