app/main/default/objects/OAH_Event__c/fields/Event_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Hearing Conference (PHC)</fullName>
                </value>
                <value>
                    <fullName>Status Conference (SC)</fullName>
                </value>
                <value>
                    <fullName>Hearing (H)</fullName>
                </value>
                <value>
                    <fullName>Motion (M)</fullName>
                </value>
                <value>
                    <fullName>Further Hearing (FH)</fullName>
                </value>
                <value>
                    <fullName>Further Status Conference (FSC)</fullName>
                </value>
                <value>
                    <fullName>Oral Argument (OA)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Hearing (RH)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Pre-Hearing Conference (RPHC)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Status Conference (RSC)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Oral Argument (ROA)</fullName>
                </value>
                <value>
                    <fullName>Rescheduled Motion (RM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>