app/main/default/objects/OAH_Event__c/fields/Event_Type_abbr2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Type_abbr2__c</fullName>
        <formula>MID(
   Event_Type_abbr__c ,
   FIND(&quot;(&quot;, Event_Type_abbr__c) + 1,
   FIND(&quot;)&quot;, Event_Type_abbr__c) - FIND(&quot;(&quot;, Event_Type_abbr__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type abbr2</label>
        <type>Text</type>
    </fields>
</CustomObject>