app/main/default/objects/OAH_Event__c/fields/Event_Type_abbr__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Event_Type_abbr__c</fullName>
        <formula>CASE(Event_Type__c,
     &quot;&quot;, &quot;&quot;,
TEXT(Event_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type abbr</label>
        <type>Text</type>
    </fields>
</CustomObject>