app/main/default/objects/OAH_Event__c/fields/HO_Nickname__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>HO_Nickname__c</fullName>
        <formula>OAH_Case_Number__r.Hearings_Officer__r.CommunityNickname</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO Nickname</label>
        <type>Text</type>
    </fields>
</CustomObject>