app/main/default/objects/OAH_Event__c/fields/OAH_Petitioner__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Petitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Petitioner</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Events (Attorney-Petitioners)</relationshipLabel>
        <relationshipName>OAH_Events2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
</CustomObject>