app/main/default/objects/OAH_Event__c/fields/OAH_Respondent__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Respondent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Respondent</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Events</relationshipLabel>
        <relationshipName>OAH_Events</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>