app/main/default/objects/OAH_Event__c/fields/Old_Case_Number__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Old_Case_Number__c</fullName>
        <label>Old Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>