app/main/default/objects/OAH_Event__c/fields/Old_Record_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>