app/main/default/objects/OAH_Event__c/fields/Old_Respondent__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Old_Respondent__c</fullName>
        <label>Old Respondent</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>