app/main/default/objects/OAH_Event__c/fields/OldRecordId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OldRecordId__c</fullName>
        <label>OldRecordId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>