app/main/default/objects/OAH_Event__c/fields/Petitioner__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Petitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petitioner-Old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Events</relationshipLabel>
        <relationshipName>OAH_Events</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>