app/main/default/objects/OAH_Event__c/fields/Proceeding__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Proceeding__c</fullName>
        <label>Proceeding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FH</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>RPH</fullName>
                </value>
                <value>
                    <fullName>RSC</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>