app/main/default/objects/OAH_Event__c/fields/Respondent__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respondent-Old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Events (Respondent)</relationshipLabel>
        <relationshipName>OAH_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>