app/main/default/objects/OAH_Event__c/fields/Via_Phone__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Via_Phone__c</fullName>
        <label>Attend Via Phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner (P)</fullName>
                </value>
                <value>
                    <fullName>Respondent (R)</fullName>
                </value>
                <value>
                    <fullName>Both (B)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>