app/main/default/objects/OAH_Event__c/fields/Via_Phone_abbr2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Via_Phone_abbr2__c</fullName>
        <formula>MID(
Via_Phone_abbr__c,
FIND(&quot;(&quot;, Via_Phone_abbr__c) + 1,
FIND(&quot;)&quot;, Via_Phone_abbr__c) - FIND(&quot;(&quot;, Via_Phone_abbr__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Via Phone abbr2</label>
        <type>Text</type>
    </fields>
</CustomObject>