app/main/default/objects/OAH_Event__c/fields/Via_Phone_abbr__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Via_Phone_abbr__c</fullName>
        <formula>CASE(Via_Phone__c ,
&quot;&quot;, &quot;&quot;,
TEXT(Via_Phone__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Via Phone abbr</label>
        <type>Text</type>
    </fields>
</CustomObject>