app/main/default/objects/OAH_Event__c/listViews/All_custom.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All_custom</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Description__c</columns>
        <columns>Event_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>